# giblang

./: .gitignore  Cargo.toml  README.md  codecov.yml  complex.bytecode  cov.profraw  cov.sh  history.txt  main.gib  test.bytecode  test.gib
crates/gibc/: Cargo.toml  README.md
crates/gibc/src/: main.rs
crates/gibc/src/check/: build_state.rs  is_scoped.rs  mod.rs  scoped_state.rs  state.rs  type_state.rs
crates/gibc/src/check/common/: pattern.rs
crates/gibc/src/check/err/: impl_type.rs
crates/gibc/src/check/expr/: call.rs  field.rs  ident.rs  lambda.rs  lit.rs  mod.rs  op.rs
crates/gibc/src/check/top/: enum_.rs  impl_.rs  member.rs  mod.rs  struct_.rs
crates/gibc/src/check/ty/: mod.rs  named.rs
crates/gibc/src/cli/: build.rs  fmt.rs  lex.rs  mod.rs  parse.rs  run.rs
crates/gibc/src/cli/info/: file_tree.rs  mod.rs
crates/gibc/src/dap/: debugger.rs  mod.rs
crates/gibc/src/db/: input.rs  mod.rs  path.rs
crates/gibc/src/db/decl/: func.rs  impl_.rs  mod.rs  struct_.rs
crates/gibc/src/ir/: builder.rs  mod.rs
crates/gibc/src/ir/common/: condition.rs  generic_arg.rs  generic_args.rs  mod.rs  pattern.rs
crates/gibc/src/ir/expr/: block.rs  call.rs  field.rs  for_.rs  ident.rs  if_else.rs  lambda.rs  lit.rs  match_.rs  match_arm.rs  member.rs  mod.rs  op.rs  tuple.rs  while_.rs
crates/gibc/src/ir/stmt/: assign.rs  let_.rs  mod.rs
crates/gibc/src/ir/top/: arg.rs  enum_.rs  enum_member.rs  func.rs  impl_.rs  mod.rs  struct_.rs  struct_body.rs  struct_field.rs  trait_.rs
crates/gibc/src/ir/ty/: mod.rs  named.rs
crates/gibc/src/item/: mod.rs
crates/gibc/src/item/common/: condition.rs  generic.rs  mod.rs  pattern.rs  type_.rs
crates/gibc/src/item/definitions/: decl.rs  generic.rs  mod.rs  var.rs
crates/gibc/src/item/expr/: block.rs  call.rs  field.rs  for_.rs  ident.rs  if_else.rs  lambda.rs  lit.rs  match_.rs  match_arm.rs  mod.rs  op.rs  while_.rs
crates/gibc/src/item/stmt/: assign.rs  let_.rs  mod.rs
crates/gibc/src/item/top/: enum_.rs  func.rs  impl_.rs  mod.rs  struct_.rs  struct_body.rs  struct_field.rs  trait_.rs
crates/gibc/src/lexer/: keyword.rs  mod.rs  parser.rs  token.rs
crates/gibc/src/lsp/: completions.rs  definition.rs  document_symbols.rs  fmt.rs  hover.rs  mod.rs
crates/gibc/src/parser/: mod.rs
crates/gibc/src/parser/common/: generic_arg.rs  generic_args.rs  ident.rs  mod.rs  optional_newline.rs  pattern.rs  type_.rs  variance.rs
crates/gibc/src/parser/expr/: access.rs  call.rs  field.rs  for_.rs  if_else.rs  lambda.rs  match_.rs  match_arm.rs  member.rs  mod.rs  op.rs  qualified_name.rs  while_.rs
crates/gibc/src/parser/stmt/: assign.rs  let_.rs  mod.rs
crates/gibc/src/parser/top/: arg.rs  enum_.rs  enum_member.rs  func.rs  impl_.rs  mod.rs  struct_.rs  struct_body.rs  struct_field.rs  trait_.rs  use_.rs
crates/gibc/src/run/: bin.rs  text.rs
crates/gibc/src/ty/: func.rs  imply.rs  ir_name.rs  is_instance.rs  is_instance_new.rs  mod.rs  name.rs  parameterize.rs  sub_tys.rs
examples/: error.gib  (+8 more)
(+345 files in other folders)
