[package]
name = "gibc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.1"
clap = { version = "4.5.3", features = ["derive"] }
chumsky = "1.0.0-alpha.7"
ptree = "0.4.0"
glob = "0.3.1"
