[package]
name = "another-giblang-impl"
version = "0.1.0"
edition = "2021"
description = "Another implementation of the Giblang programming language"
repository = "https:://github.com/mnbjhu/another-giblang-impl"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.1"
clap = { version = "4.5.3", features = ["derive"] }
chumsky = "1.0.0-alpha.7"
ptree = "0.4.0"
glob = "0.3.1"

# Use toolchain version 1.74
[package.metadata.toolchain]
version = "1.73"

[lints.clippy]
