[package]
name = "giblang"
version = "0.1.0"
edition = "2021"
description = "Another implementation of the Giblang programming language"
repository = "https:://github.com/mnbjhu/giblang"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.1"
clap = { version = "4.5.3", features = ["derive"] }
chumsky = "1.0.0-alpha.7"
glob = "0.3.1"
serde = { version = "1.0.130", features = ["derive"] }
tower-lsp = { version = "0.20.0", features = ["default"] }
tokio = { version = "1.16.1", features = ["full"] }
serde_json = { version = "1.0.116" }
dashmap = { version = "5.5.3" }

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
